@@ -16,7 +16,7 @@
 			<label index="selectParams">Select params</label>
 			<label index="sortName">Sort name</label>
 			<label index="sortName_tstamp">Update date</label>
-			<label index="sortName_crdate">Insert date</label>
+			<label index="sortName_release">Release date</label>
 			<label index="sortOrder">Sort order</label>
 			<label index="sortOrder_asc">Ascendant</label>
 			<label index="sortOrder_desc">Descendant</label>
@@ -32,7 +32,7 @@
 			<label index="selectParams">Paramètre de sélection</label>
 			<label index="sortName">Trier par</label>
 			<label index="sortName_tstamp">Date de mise à jour</label>
-			<label index="sortName_crdate">Date d'ajout</label>
+			<label index="sortName_release">Date de publication</label>
 			<label index="agencies">Agences</label>
 			<label index="sortOrder">Ordre de tri</label>
 			<label index="sortOrder_asc">Ascendant</label>
