@@ -1,0 +1,17 @@
+<!-- ###TEMPLATE_LIST### start -->
+<div class="###PREFIXID###_list">
+	<div class="###PREFIXID###_dataset">
+		<!-- ###GROUP_ROW_CONTENT### start -->
+		<!-- ###GROUP_ROW_ALT### start -->
+		<!-- ###GROUP_ROW### start -->
+		<!-- ###ROW_ITEM### start -->
+		<p><a class="detail_link" href="###URL###">###TITLE###</a></P>
+		<p>###RELEASE_DATE###</p>
+		<p>###PUBLISHER###</p>
+		<!-- ###ROW_ITEM### end -->
+		<!-- ###GROUP_ROW### end -->
+		<!-- ###GROUP_ROW_ALT### end -->
+		<!-- ###GROUP_ROW_CONTENT### end -->
+	</div>
+</div>
+<!-- ###TEMPLATE_LIST### end -->
